services/judge/deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: judge
  labels:
    app.kubernetes.io/name: judge
    app.kubernetes.io/part-of: pokecalc
spec:
  selector:
    app.kubernetes.io/name: judge
  ports:
    - name: http
      port: 80
      targetPort: http
